# mechanics

./: .gitignore  README.md  run-haskell.sh  run-idris.sh  run.sh
haskell/: Ast.hs  LICENSE  Parser.hs  README.md  mechanics.cabal  run.sh  simple.f
haskell/src/: Ast.hs
haskell/src/Parser/: Impl.hs
haskell/tests/: HLint.hs
idris/: Ast.idr  ForwardDiff.idr  Interp.idr  InterpExp.idr  Main.idr  Makefile  MonadExt.idr  Parser.idr  SimpleParse.idr  mechanics.ipkg
idris/Parser/: Impl.idr
idris/Test/: Parser.idr
notes/: .gitignore  Notes.org  master.tex  notes.sty  weave.py
notes/1st/: basic-definitions.tex  document.tex  grammar.tex  linearity.tex  preamble.tex  references.bib
src/: Ast.hs
src/Parser/: Impl.hs
