name:                mechanics
version:             0.1.0.0
homepage:            https://github.com/oleks/mechanics
license:             BSD3
license-file:        LICENSE
author:              Oleks
maintainer:          oleks@oleks.info
copyright:           2017 Oleks
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/oleks/mechanics
