name:                mechanics
version:             0.0.0.0
homepage:            https://github.com/oleks/mechanics
license:             BSD3
license-file:        LICENSE
author:              Oleks
maintainer:          oleks@oleks.info
copyright:           2017 Oleks
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Ast
                      , Parser
  other-modules:        Parser.Impl
  build-depends:        base >= 4.7 && < 5
                      , parsec >= 3.1.11
                      , pretty >= 1.1.3.3
  default-language:     Haskell2010

test-suite hlint
  build-depends:        base
                      , hlint >= 1.8.61
  default-language:     Haskell2010
  hs-source-dirs:       tests
  main-is:              HLint.hs
  type:                 exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/oleks/mechanics
